--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,9 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version: '3.4.0'
-    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.4.0'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version: '3.14.0'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.14.0'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
 
     compile group: 'org.jsoup', name: 'jsoup', version: '1.10.3'
 
